@@ -24,7 +24,7 @@
  * file named AUTHORS, in the root directory of this distribution.
  */
 /*
- * $Id: planner.c,v 1.76.2.15.2.13.2.32.2.7 2004/04/23 11:38:56 martinea Exp $
+ * $Id: planner.c,v 1.76.2.15.2.13.2.32.2.8 2004/05/03 18:11:59 martinea Exp $
  *
  * backup schedule planner for the Amanda backup system.
  */
@@ -1607,6 +1607,7 @@ pkt_t *pkt;
 			est(dp)->level[0], est(dp)->est_size[0],
 			est(dp)->level[1], est(dp)->est_size[1],
 			est(dp)->level[2], est(dp)->est_size[2]);
+	    enqueue_disk(&pestq, dp);
 	}
 	else if(pkt->type == P_REP) {
 		fprintf(stderr,"%s: time %s: got result for host %s disk %s:",
@@ -1658,9 +1659,6 @@ pkt_t *pkt;
 						NULL);
 		}
 	    }
-	}
-	else if(pkt->type == P_PREP) {
-	    enqueue_disk(&pestq, dp);
 	}
     }
     getsize(hostp);
