@@ -1,3 +1,8 @@
+2004-05-03  Jean-Louis Martineau <martineau@iro.umontreal.ca>
+
+	* server-src/planner.c (handle_result): Add dp to pestq at the
+	  correct place.
+
 2004-04-30  Jean-Louis Martineau <martineau@iro.umontreal.ca>
 
 	* common-src/amanda.h: #include "amanda-int.h" only if !CONFIGURE_TEST.
